[tool.poetry]
name = "superbenchmark"
version = "0.1.0"
description = ""
authors = ["misha kalita <mishakalita1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
click = "8.1.7"
fastapi = "0.115.2"
h11 = "0.14.0"
httptools = "0.6.2"
idna = "3.10"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
sniffio = "1.3.1"
starlette = "0.40.0"
typing-extensions = "4.12.2"
uvicorn = "0.32.0"
uvloop = "0.21.0"
watchfiles = "0.24.0"
websockets = "13.1"
pydantic-settings = "^2.5.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.12.0"
pre-commit = "^4.0.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
